samples/_failures_safe/1761498432_ee8eb4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_11df3d55.c: In function ‘tokenize’:
./samples/SAFE/__tmp_11df3d55.c:163:9: error: expected expression at end of input
  163 |         tokens[token_count].value[
      |         ^~~~~~
./samples/SAFE/__tmp_11df3d55.c:163:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_11df3d55.c:163:9: error: expected declaration or statement at end of input
